# pybind11_tensor

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
include/: eigen_tensor_ext.h  eigen_tensor_ext_pyb.h  pybind11_eigen_quat.h  pybind11_eigen_tensor.h  tensor_traits.h
pybind11_tensor_test/: CMakeLists.txt  main.cpp  pybind11_tensor_test.cpp  pybind11_tensor_test.h
pybind11_tensor_test/slice/: CMakeLists.txt  slice.cpp
pybind11_tensor_test/transfer/: CMakeLists.txt  main.cpp
test/: run_tests.bat  test_pybind11.py
tests/: run_tests.bat  test_pybind11.py  test_slice.py
